Fix weird header line spacing for mobile

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -12,21 +12,13 @@ html {
 }
 
 body {
-  line-height: 1.2em;
+  line-height: 1.2rem;
   margin: 0;
   padding: 0;
   border: 0;
   font-size: 100%;
   font-weight: 300;
   vertical-align: baseline;
-}
-
-main {
-  width: 100%;
-  max-width: 960px;
-  padding: 0;
-  margin: 0 auto;
-  padding-top: 60px;
 }
 
 .container {
